Update CI workflow

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -19,12 +19,12 @@ jobs:
         ports:
           - "5432:5432"
         env:
-          POSTGRES_DB: rails_test
-          POSTGRES_USER: rails
-          POSTGRES_PASSWORD: password
+          POSTGRES_DB: JellyBox_test
+          POSTGRES_USER: ${{PG_USER}}
+          POSTGRES_PASSWORD: ${{PG_PASSWORD}}
     env:
       RAILS_ENV: test
-      DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
+      DATABASE_URL: "postgres://rails:password@localhost:5432/JellyBox_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
