--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -12,6 +12,7 @@ on:
     branches: [ "main" ]
 jobs:
   test:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -41,6 +42,7 @@ jobs:
         run: bin/rake
 
   lint:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
