--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -36,7 +36,9 @@ jobs:
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: bin/rails db:schema:load
+        run: |
+          bin/rails db:setup
+          bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake
