--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -19,7 +19,11 @@ jobs:
         image: postgres:12.1-alpine
         ports:
           - "5432:5432"
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        options:
+          --health-cmd pg_isready 
+          --health-interval 10s 
+          --health-timeout 5s 
+          --health-retries 5
         env:
           POSTGRES_DB: JellyBox_test
           POSTGRES_USER: ${{ secrets.PG_USER }}
@@ -38,7 +42,6 @@ jobs:
       # Add or replace database setup steps here
       - name: Set up database schema
         run: |
-          bin/rails db:setup
           bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run tests
