--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -42,7 +42,8 @@ jobs:
       # Add or replace database setup steps here
       - name: Set up database schema
         run: |
-          bin/rails db:schema:load
+          bundle exec rails db:setup
+          bundle exec rspec
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake
