--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches: [ "main" ]
 jobs:
-  test:
+  Test:
     if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     services:
@@ -41,14 +41,12 @@ jobs:
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
-        run: |
-          bundle exec rails db:setup
-          bundle exec rspec
+        run: bundle exec rails db:setup
       # Add or replace test runners here
       - name: Run tests
-        run: bin/rake
+        run: bundle exec rspec
 
-  lint:
+  Lint:
     if: ${{ github.actor != 'dependabot[bot]' }}
     runs-on: ubuntu-latest
     steps:
@@ -60,7 +58,7 @@ jobs:
           bundler-cache: true
       # Add or replace any other lints here
       - name: Security audit dependencies
-        run: bin/bundler-audit --update
+        uses: andrewmcodes/bundler-audit-action@main
       - name: Security audit application code
         run: bin/brakeman -q -w2
       - name: Lint Ruby files
