--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -62,4 +62,4 @@ jobs:
       - name: Security audit application code
         run: bundle exec brakeman
       - name: Lint Ruby files
-        run: bin/rubocop --parallel
+        run: bundle exec rubocop --parallel
