--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,13 @@ Style/SymbolArray:
 Style/NumericLiterals:
   Enabled: false
 
+Style/BlockDelimiters:
+  Enabled: false
+
 Style/WordArray:
+  Enabled: false
+
+Style/IfUnlessModifier:
   Enabled: false
 
 Style/ClassAndModuleChildren:
@@ -31,7 +37,13 @@ Layout/EmptyLinesAroundClassBody:
 Layout/EmptyLinesAroundBlockBody:
   Enabled: false
 
+Layout/EmptyLinesAroundMethodBody:
+  Enabled: false
+
 Layout/TrailingEmptyLines:
+  Enabled: false
+
+Layout/TrailingWhitespace:
   Enabled: false
 
 Layout/LineLength:
@@ -50,6 +62,9 @@ Metrics/CyclomaticComplexity:
   Enabled: false
 
 Metrics/PerceivedComplexity:
+  Enabled: false
+
+Metrics/BlockLength:
   Enabled: false
 
 Lint/UselessAssignment:
