--- a/config/database.yml
+++ b/config/database.yml
@@ -65,12 +65,14 @@ test:
 # URL environment variable explicitly:
 #
 #   production:
-#     url: <%= ENV["MY_APP_DATABASE_URL"] %>
+#     url: <%#= ENV["MY_APP_DATABASE_URL"] %>
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
 production:
   <<: *default
+  adapter: postgresql
+  encoding: unicode
   url: <%=ENV['DATABASE_URL'] %>
 
