--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "app",
   "private": "true",
-  "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
-  },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
-    "@hotwired/turbo-rails": "^7.3.0",
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
-    "jquery": "^3.7.1"
+    "@hotwired/turbo-rails": "^8.0.0-beta.1",
+    "esbuild": "^0.19.9"
   },
-  "devDependencies": {
-    "esbuild": "0.19.4",
-    "webpack": "^5.89.0"
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets"
   }
 }
