--- a/config/storage.yml
+++ b/config/storage.yml
@@ -22,7 +22,7 @@
 #   bucket: your_own_bucket-<%= Rails.env %>
 
 # Use bin/rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
- microsoft:
+ azure:
    service: AzureStorage
    storage_account_name: jellyboxstorage
    storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
