--- a/test/fixtures/users.yaml
+++ b/test/fixtures/users.yaml
@@ -1,4 +1,4 @@
-user_01:
-  id: 2
-  email: test_user@email.com
-  encrypted_password: <%= User.new.send(:password_digest, 'testpassword') %>
+one:
+  email: test_one@email.com
+two:
+  email: test_two@email.com
