--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,6 +13,9 @@ Style/StringLiterals:
 Style/HashSyntax:
   Enabled: false
 
+Style/PercentLiteralDelimiters:
+  Enabled: false
+
 Style/SymbolArray:
   Enabled: false
 
